--- a/asstes/css/details.css
+++ b/asstes/css/details.css
@@ -7,17 +7,18 @@
 .detail1 .left {
     width: 35%;
     height: 738.875244140625px;
-    float: left;
 }
 
 .detail1 .right {
     width: 65%;
     height: 738.875244140625px;
-    float: right;
     margin: auto;
 }
 
 .detail1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     height: 738.875244140625px;
     background-color: rgb(13, 131, 147);
 }
@@ -40,7 +41,7 @@
     height: 57px;
     width: 154px;
     color: #FFFFFF;
-    border: 1px solid #FFFFFF;
+    border: 2px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 6px;
     margin-top: 70px;
@@ -53,26 +54,27 @@
     width: 104px;
     line-height: 50px;
     font-style: italic;
-    border-bottom: 2px solid #FFFFFF;
+    border-bottom: 3px solid #FFFFFF;
 }
 
 /* ====detail2===== */
 .detail2 {
     height: 588.24px;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     background-color: #FFFFFF;
 }
 
 .detail2 .left {
     width: 40%;
     height: 588.24px;
-    float: left;
 }
 
 .detail2 .right {
     width: 60%;
     height: 588.24px;
-    float: right;
     margin: auto;
 }
 
@@ -93,7 +95,7 @@
     height: 57px;
     width: 154px;
     color: #000;
-    border: 1px solid #000;
+    border: 2px solid #000;
     box-sizing: border-box;
     border-radius: 6px;
     margin-top: 70px;
@@ -106,7 +108,7 @@
     width: 104px;
     line-height: 50px;
     font-style: italic;
-    border-bottom: 2px solid #000;
+    border-bottom: 3px solid #000;
 }
 
 /* ====detail3====== */
@@ -114,20 +116,21 @@
     height: 421px;
     width: 100%;
     color: #FFFFFF;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     background-color: rgb(13, 131, 147);
 }
 
 .detail3 .left {
     width: 60%;
     height: 421px;
-    float: left;
 }
 
 .detail3 .right {
     width: 40%;
     height: 421px;
     background-color: #FFFFFF;
-    float: right;
     margin: auto;
 }
 
@@ -146,7 +149,7 @@
     height: 57px;
     width: 154px;
     color: #FFFFFF;
-    border: 1px solid #FFFFFF;
+    border: 2px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 6px;
     margin-top: 70px;
@@ -159,5 +162,5 @@
     width: 104px;
     line-height: 50px;
     font-style: italic;
-    border-bottom: 2px solid #FFFFFF;
+    border-bottom: 3px solid #FFFFFF;
 }
