--- a/asstes/css/end.css
+++ b/asstes/css/end.css
@@ -1,50 +1,58 @@
-.end{
-    height: 364px;
+.end {
+    /* height: 364px;    */
     width: 100%;
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
-.announcementImg img{
+.announcementImg img {
     display: block;
     padding-top: 35px;
     padding-left: 30px;
-    width: 316px;
-    height: 316px;
-    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    border-radius: 400px;
 }
-.announcementCon{
+
+.announcementCon {
     width: 316px;
     height: 316px;
     margin-left: 60px;
 }
-.announcementCon h4{
+
+.announcementCon h4 {
     color: #863800;
     padding-top: 35px;
     line-height: 50px;
     width: 140px;
     border-bottom: 5px solid #863800;
 }
-.announcementCon p{
+
+.announcementCon p {
     margin-top: 40px;
     font-weight: 700;
 }
-.separator{
+
+.separator {
     margin-top: 35px;
     width: 30px;
     height: 50px;
     border-right: 5px solid #C4C4C4;
 }
-.relations{
+
+.relations {
     width: 516px;
     height: 364px;
 }
-.relations h4{
+
+.relations h4 {
     text-align: center;
     margin-top: 35px;
 }
-.relations img{
+
+.relations img {
     margin-top: 20px;
-    margin-left: 40px;
-    width: 450px;
+    margin-left: 80px;
+    width: 300px;
 }
