--- a/asstes/css/details.css
+++ b/asstes/css/details.css
@@ -1,8 +1,3 @@
-.content {
-    margin: auto;
-    width: 100%;
-}
-
 /* ======== */
 .detail1 .left {
     width: 35%;
@@ -23,7 +18,7 @@
 .detail1 h1 {
     color: #FFFFFF;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 5%;
 }
 
 .detail1 p {
@@ -36,13 +31,12 @@
     text-decoration: none;
     display: block;
     height: 57px;
-    width: 104;
+    width: 154px;
     color: #FFFFFF;
-    border: 2px solid #FFFFFF;
+    border: 1px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 6px;
-    margin-top: 70px;
-    margin-left: 70%;
+    margin: 8% 55%;
 }
 
 .detail1 .readMore p {
@@ -64,16 +58,7 @@
     background-color: #FFFFFF;
 }
 
-.detail2 .left {
-    width: 40%;
-    /* height: 588.24px; */
-}
 
-.detail2 .right {
-    width: 60%;
-    /* height: 588.24px; */
-    margin: auto;
-}
 
 .detail2 p {
     margin-left: 20px;
@@ -90,19 +75,23 @@
     text-decoration: none;
     display: block;
     height: 57px;
-    width: 20%;
+    width: 154px;
     color: #000;
-    border: 2px solid #000;
+    border: 1px solid #000;
     box-sizing: border-box;
     border-radius: 6px;
-    margin-top: 70px;
-    margin-left: 70%;
+    margin: 8% 55%;
 }
+
+
+
+
 
 .detail2 .readMore p {
     margin: auto;
     height: 40px;
     width: 80%;
+    text-align: center;
     line-height: 50px;
     font-style: italic;
     border-bottom: 3px solid #000;
@@ -110,8 +99,6 @@
 
 /* ====detail3====== */
 .detail3 {
-    /* height: 421px; */
-    width: 100%;
     color: #FFFFFF;
     display: flex;
     flex-direction: row;
@@ -144,13 +131,12 @@
     text-decoration: none;
     display: block;
     height: 57px;
-    width: 20%;
+    width: 154px;
     color: #FFFFFF;
-    border: 2px solid #FFFFFF;
+    border: 1px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 6px;
-    margin-top: 70px;
-    margin-left: 70%;
+    margin: 8% 55%;
 }
 
 .detail3 .readMore p {
@@ -160,4 +146,67 @@
     line-height: 50px;
     font-style: italic;
     border-bottom: 3px solid #FFFFFF;
+}
+
+.readMore:hover {
+    box-shadow: 0px 0px 5px #888888;
+    /* 边框阴影 */
+    -moz-box-shadow: 0px 0px 5px #888888;
+    /* 老的 Firefox */
+}
+
+
+.detail3 .readMore:hover {
+    box-shadow: 0px 0px 5px #ffffff;
+    /* 边框阴影 */
+    -moz-box-shadow: 0px 0px 5px #ffffff;
+    /* 老的 Firefox */
+}
+
+.detail1 .readMore:hover {
+    box-shadow: 0px 0px 5px #ffffff;
+    /* 边框阴影 */
+    -moz-box-shadow: 0px 0px 5px #ffffff;
+    /* 老的 Firefox */
+}
+
+.detail1 .readMore:active {
+    box-shadow: 0px 0px 10px #10239e;
+    /* 边框阴影 */
+    -moz-box-shadow: 0px 0px 5px #10239e;
+    /* 老的 Firefox */
+}
+
+.detail3 .readMore:active {
+    box-shadow: 0px 0px 10px #10239e;
+    /* 边框阴影 */
+    -moz-box-shadow: 0px 0px 5px #10239e;
+    /* 老的 Firefox */
+}
+
+.readMore:active {
+    box-shadow: 0px 0px 10px #1890ff;
+    /* 边框阴影 */
+    -moz-box-shadow: 0px 0px 5px #1890ff;
+    /* 老的 Firefox */
+}
+
+@media (min-width: 800px) {
+    .detail1 .readMore {
+
+        margin: 5% 68%;
+    }
+
+    .detail2 .readMore {
+
+        margin: 5% 68%;
+    }
+
+
+
+    .detail3 .readMore {
+
+        margin: 10% 58%;
+    }
+
 }
