--- a/asstes/css/end.css
+++ b/asstes/css/end.css
@@ -1,26 +1,11 @@
-.end {
-    /* height: 364px;    */
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
 .announcementImg img {
     display: block;
-    padding-top: 35px;
-    padding-left: 30px;
-    width: 200px;
-    height: 200px;
-    border-radius: 400px;
+    width: 80%;
+    border-radius: 100%;
 }
 
-.announcementCon {
-    width: 316px;
-    height: 316px;
-    margin-left: 60px;
-}
 
+/* 
 .announcementCon h4 {
     color: #863800;
     padding-top: 35px;
@@ -29,10 +14,7 @@
     border-bottom: 5px solid #863800;
 }
 
-.announcementCon p {
-    margin-top: 40px;
-    font-weight: 700;
-}
+
 
 .separator {
     margin-top: 35px;
@@ -55,4 +37,4 @@
     margin-top: 20px;
     margin-left: 80px;
     width: 300px;
-}
+} */
