--- a/asstes/css/foot.css
+++ b/asstes/css/foot.css
@@ -10,7 +10,7 @@
     margin-top: 20px;
     margin-left: 30px;
     color: #FFFFFF;
-    width: 702px;
+    width: 802px;
 }
 
 .aboutUs h3 {
@@ -25,8 +25,9 @@
 .navigation {
     margin-top: 20px;
     margin-left: 50px;
+    margin-right: 30px;
     color: #FFFFFF;
-    width: 402px;
+    width: 452px;
 }
 
 .navigation h3 {
@@ -35,6 +36,7 @@
 }
 
 .navigation a {
+    padding-left: 3%;
     text-decoration: none;
     color: #FFFFFF;
     display: block;
