--- a/asstes/css/end.css
+++ b/asstes/css/end.css
@@ -1,40 +1,30 @@
 .announcementImg img {
-    display: block;
-    width: 80%;
+    /* display: block; */
+    width: 100%;
+    margin: 5% auto;
     border-radius: 100%;
 }
 
-
-/* 
-.announcementCon h4 {
-    color: #863800;
-    padding-top: 35px;
-    line-height: 50px;
-    width: 140px;
-    border-bottom: 5px solid #863800;
+h5 {
+    font-weight: 800;
 }
 
 
 
-.separator {
-    margin-top: 35px;
-    width: 30px;
-    height: 50px;
-    border-right: 5px solid #C4C4C4;
-}
+@media (max-width: 575px) {
+    .announcementImg img {
+        /* display: block; */
+        width: 40%;
+        margin: 5% auto;
+        border-radius: 100%;
+    }
 
-.relations {
-    width: 516px;
-    height: 364px;
-}
+    .mm {
+        display: block;
+        width: 100%;
+    }
 
-.relations h4 {
-    text-align: center;
-    margin-top: 35px;
+    .content {
+        display: block;
+    }
 }
-
-.relations img {
-    margin-top: 20px;
-    margin-left: 80px;
-    width: 300px;
-} */
